--- a/src/Component/PlaceBook/PlaceBook.css
+++ b/src/Component/PlaceBook/PlaceBook.css
@@ -2,29 +2,39 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: rgba(1, 27, 14, 0.973);
+    width: 35%;
+    border-radius: 50px;
+    margin: 0 auto;
+    padding: 50px 0px;
   }
   .confirm-booking-form form input {
     text-align: center;
-    width: 40%;
+    width: 90%;
     margin: 6px;
     padding: 8px;
 
     color: #000000;
-    border-radius: 20px;
-    border: 2px solid #afafaf;
+    border-radius: 10px;
+    border: .5px solid #e6e6e6;
   }
   .confirm-booking-form textarea {
     text-align: center;
-    width: 40%;
+    width: 90%;
     margin: 6px;
     padding: 8px;
-    
+  
     color: #000000;
     border-radius: 20px;
-    border: 1px solid #bebebe;
+   
   }
   .confirmbutton:hover {
-    background-color: #dfbf9a;
+    background-color: #800905;
+  }
+  .confirmbutton {
+    background-color: #1d65ebef; 
+
+    
   }
   .disableinput {
     display: none;
