--- a/src/Component/Services/Services.css
+++ b/src/Component/Services/Services.css
@@ -38,11 +38,11 @@
   }   */
   
   .rooms-featured {
-    margin-top: 100px; 
-  
-    font-size: 40px;
+    margin-bottom: 30px;  
+    font-size: 25px;
     font-weight: 300;
     color:#ffffff;
+    padding: 5px;
     background-color: rgb(112, 6, 6);
     border-radius: 30px;
   }
